[package]
name = "fledger"
version = "0.8.0"
edition = "2021"
authors = ["Linus Gasser <linus@gasser.blue>"]
description = "The fledger server as a CLI"
repository = "https://github.com/ineiti/fledger"
license = "MIT OR Apache-2.0"
homepage = "https://fledg.re"
readme = "README.md"
keywords = ["network", "signalling", "webrtc"]
categories = ["network-programming"]

[dependencies]
flarch = { path = "../../flarch", version = "0.8" }
flmodules = { path = "../../flmodules", version = "0.8" }
flnode = { path = "../../flnode", version = "0.8" }

clap = "4"
clap-verbosity-flag = "2"
env_logger = "0.11"
log = "0.4"
thiserror = "1"
tokio = "1"
webrtc-util = "0.9"

x25519-dalek = {version = "2", features = ["serde"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
prometheus = "0.13.4"
