[package]
name = "fledger"
version = "0.9.2"
edition = "2021"
authors = ["Linus Gasser <linus@gasser.blue>"]
description = "The fledger server as a CLI"
repository = "https://github.com/ineiti/fledger"
license = "MIT OR Apache-2.0"
homepage = "https://fledg.re"
readme = "README.md"
keywords = ["network", "signalling", "webrtc"]
categories = ["network-programming"]

[dependencies]
flarch = { path = "../../flarch", version = "0.9" }
flmodules = { path = "../../flmodules", version = "0.9" }
flnode = { path = "../../flnode", version = "0.9" }
flcrypto = { path = "../../flcrypto", version = "0.9" }

anyhow = { version = "1", features = ["backtrace"] }
clap = "4"
clap-verbosity-flag = "3"
env_logger = "0.11"
log = "0.4"
thiserror = "2"
tokio = "1"
webrtc-util = "0.10"
metrics = "0.21.1"
metrics-exporter-influx = { version = "0.2.2", path = "../../metrics-exporter-influx" }
