[package]
name = "flnode"
version = "0.1.0"
authors = ["Linus Gasser <linus@gasser.blue>"]
edition = "2018"
description = "gtk for WebRTC Fledger communication"
repository = "https://github.com/ineiti/fledger-1-webrtc"
license = "AGPLv3"

[lib]
crate-type = ["cdylib"]
# crate-type = ["cdylib", "rlib"]

[features]
local = []

[dependencies]
common = {path = "../../common"}
wasm-lib = {path = "../../wasm/lib", features=["node"]}
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"]  }
js-sys = "0.3.46"
wasm-bindgen-futures = "0.4.19"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
serde_json = "1.0.59"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.6"

async-trait = ""
wasm-bindgen-test = ""
regex = ""
urlencoding = ""
wasm-logger = ""
log = ""

[dependencies.web-sys]
version = "0.3.46"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'ReadableStream',
  "MessageEvent",
  "RtcPeerConnection",
  "RtcSignalingState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceConnectionState",
  "RtcIceGatheringState",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelState",

  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  "Location",

]
