[package]
name = "flnode"
version = "0.1.0"
authors = ["Linus Gasser <linus@gasser.blue>"]
edition = "2018"
description = "gtk for WebRTC Fledger communication"
repository = "https://github.com/ineiti/fledger-1-webrtc"
license = "AGPLv3"

[lib]
crate-type = ["cdylib"]
# crate-type = ["cdylib", "rlib"]

[features]
local = []

[dependencies]
common = {path = "../../common"}
wasm-webrtc = {path = "../../wasm-webrtc", features=["node"]}
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
js-sys = "0.3.51"
wasm-bindgen-futures = "0.4.24"
serde = { version = "1.0.127", features = ["derive"] }
serde_derive = "1.0.127"
serde_json = "1.0.66"
getrandom = { version = "0.2.3", features = ["js"] }
console_error_panic_hook = "0.1.6"

async-trait = "0.1.51"
wasm-bindgen-test = "0.3.24"
regex = "1.5.4"
urlencoding = "2.1.0"
wasm-logger = "0.2.0"
log = "0.4.14"

[dependencies.web-sys]
version = "0.3.51"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'ReadableStream',
  "MessageEvent",
  "RtcPeerConnection",
  "RtcSignalingState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceConnectionState",
  "RtcIceGatheringState",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelState",

  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  "Location",

]
