[package]
name = "flsignal"
version = "0.10.0"
edition = "2021"
authors = ["Linus Gasser <linus@gasser.blue>"]
description = "The signalling server as a CLI"
repository = "https://github.com/ineiti/fledger"
license = "MIT OR Apache-2.0"
homepage = "https://fledg.re"
readme = "README.md"
keywords = ["network", "signalling", "webrtc"]
categories = ["network-programming"]

[dependencies]
flmodules = {path = "../../flmodules", version = "0.10"}
flarch = {path = "../../flarch", version = "0.10"}

anyhow = {version = "1", features = ["backtrace"]}
clap = "4"
clap-verbosity-flag = "3"
env_logger = "0.11"
log = "0.4"
thiserror = "2"
tokio = "1"
