[package]
name = "node"
version = "0.1.0"
authors = ["Linus Gasser <linus@gasser.blue>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = {path = "../../cloned/rust-headless-chrome"}
failure = ""
urlencoding = ""
serde_json = ""
