[package]
name = "flnode"
version = "0.1.0"
authors = ["Linus Gasser <linus@gasser.blue>"]
edition = "2018"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = {path = "../../cloned/rust-headless-chrome"}
clap = "3.0.0-beta.2"

failure = ""
urlencoding = ""
serde_json = ""

# [build-dependencies]
# vergen = "4"
