[package]
name = "signal"
version = "0.1.0"
authors = ["Linus Gasser <linus@gasser.blue>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = {path="../../modules/types"}
raw = {path="../../modules/raw"}
common = {path = "../../common"}
serde = "1.0.127"
serde_json = "1.0.66"
serde_derive = "1.0.127"
rand = "0.8.4"
tungstenite = "0.14.0"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
async-trait = "0.1.51"
futures = "0.3.16"
bimap = "0.6.1"
structopt = "0.3.22"
log = "0.4.14"
flexi_logger= "0.18.0"
dipstick= "0.9.0"
csv = "1.1.6"
thiserror = "1.0.6"