[package]
name = "signal"
version = "0.2.0"
authors = ["Linus Gasser <linus@gasser.blue>"]
edition = "2021"
description = "CLI for signal server in fledger"
repository = "https://github.com/ineiti/fledger"
license = "AGPLv3"

[dependencies]
flutils = {path="../../flutils"}
flmodules = {path="../../flmodules"}
flnet = {path="../../flnet"}
flnode = {path = "../../flnode"}

serde = "1.0.127"
serde_json = "1.0.66"
serde_derive = "1.0.127"
rand = "0.8.4"
tungstenite = "0.14.0"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
async-trait = "0.1.51"
futures = "0.3.16"
bimap = "0.6.1"
structopt = "0.3.22"
log = "0.4.14"
flexi_logger= "0.18.0"
dipstick= "0.9.0"
csv = "1.1.6"
thiserror = "1.0.6"
