[package]
edition = "2021"
name = "ping"
version = "0.9.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flarch = {path = "../../flarch", version = "0.9"}
flmodules = {path = "../../flmodules", version = "0.9"}

anyhow = {version = "1", features = ["backtrace"]}
clap = {version = "4", features = ["derive"]}
log = "0.4"
serde = "*"
tokio = {version="1", features = ["rt-multi-thread"]}
tokio-stream = "0.1"
