[package]
name = "flnet-wasm"
version = "0.6.0"
edition = "2021"
authors = ["Linus Gasser <linus@gasser.blue>"]
description = "Network implementation for wasm"
repository = "https://github.com/ineiti/fledger"
license = "MIT OR Apache-2.0"
homepage = "https://fledg.re"
readme = "README.md"
keywords = ["webrtc", "websocket", "async-hell", "fledger"]
categories = ["network-programming", "wasm", "web-programming::websocket"]

[dependencies]
flnet = {path="../../shared/flnet", features = ["wasm"], version = "0.6"}
flutils = {path = "../../shared/flutils", features = ["wasm"], version = "0.6"}
femme = "2"

wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"

getrandom = { version = "0.2", features = ["js"] }
thiserror = "1"
async-trait = "0.1"
log = "0.4"
anyhow = "1"
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
wasm-timer = "0.2"
parking_lot = { version = "0.11", features = ["wasm-bindgen"]}
futures = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'ReadableStream',
  "MessageEvent",
  "RtcConfiguration",
  "RtcPeerConnection",
  "RtcSignalingState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceConnectionState",
  "RtcIceGatheringState",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelState",

  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  "Document",
  "Storage",
  "Navigator"
]
