[package]
name = "flnode"
version = "0.6.0"
edition = "2021"
authors = ["Linus Gasser <linus@gasser.blue>"]
description = "Glue code for flnet and flmodules"
repository = "https://github.com/ineiti/fledger"
license = "MIT OR Apache-2.0"
homepage = "https://fledg.re"
readme = "README.md"
keywords = ["test", "utils", "fledger"]

[features]
wasm = []

[dependencies]
flnet = {path="../flnet", version = "0.6"}
flutils = {path = "../flutils", version = "0.6"}
flmodules = {path = "../flmodules", version = "0.6"}

transitive_from = "0.1"
async-trait = "0.1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.8"
toml = "0.5"

# The "js" is to make sure it also works for the flnode and web crates
getrandom = { version = "0.2", features = ["js"] }
names = "0.13"
thiserror = "1"
futures = "0.3"
log = "0.4"
sha2 = "0.10"
ed25519-dalek = { version = "1", features = ["serde"] }
ed25519-compact = "1"
timer = "0.2"
itertools = "0.10"
chrono = "0.4"
bitflags = "1"

[dev-dependencies]
env_logger = "0.9"
tokio = "1"
